--- a/app/views/main.html
+++ b/app/views/main.html
@@ -18,12 +18,14 @@
 </div>
 <div class="row">
   <div class="col-sm-12">
-    <table class="table table-striped table-hover">
+    <table class="table">
       <p class="lead">Samples</p>
       <p>Click to view details</p>
       <thead><tr><th>Permit</th><th>Code</th><th>Date</th></tr></thead>
       <tbody>
-        <tr ng-repeat="result in wellresults" ng-click="permitClicked({{result}})" ng-model="selectedResult"><td>{{result.permit}}</td><td>{{result.prefix}}</td><td>{{result.sampledOn}}</td><tr>
+        <tr ng-repeat="result in wellresults" ng-click="permitClicked($index, {{result}})" ng-model="selectedResult"
+          ng-class="{ 'selected-row': $index == selectedIndex }"
+        ><td>{{result.permit}}</td><td>{{result.prefix}}</td><td>{{result.sampledOn}}</td><tr>
       </tbody>
     </table>
   </div>
@@ -31,11 +33,11 @@
 <div class="row">
   <div class="col-sm-12">
     <p class="lead">Sample Details</p>
-     <table class="table table-condensed table-striped table-bo">
+     <table class="table table-condensed table-striped">
       <colgroup><col width="20%"></col><col width="16%"></col><col width="16%"></col><col width="16%"></col><col width="16%"></col><col width="16%"></col></colgroup>
       <thead><tr><th ng-repeat="header in headers">{{header}}</th></tr></thead>
       <tbody>
-        <tr ng-repeat="detail in welldetails"><td>{{detail.analyteType}}</td><td>{{detail.chemName}}</td><td>{{detail.concentration}}{{detail.unit}}</td><td>{{detail.qualDesc}}</td><td>{{detail.limit}}{{detail.unit}}</td><td>{{detail.epi}}{{detail.unit}}</td></tr>
+        <tr ng-repeat="detail in welldetails"><td>{{detail.analyteType}}</td><td>{{detail.chemName}}</td><td>{{detail.concentration}}{{detail.unit}}</td><td>{{detail.qualifier}}</td><td>{{detail.limit}}{{detail.unit}}</td><td>{{detail.epi}}{{detail.unit}}</td></tr>
       </tbody>
     </table>
     <button class="btn btn-primary" ng-click="print()" ng-disabled="countResults()"><span class="glyphicon glyphicon-print"></span> Print</button>
