--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -31,6 +31,10 @@ body {
   border-top: 1px solid #e5e5e5;
 }
 
+th {
+  text-align: center;
+}
+
 /* Customize container */
 @media (min-width: 768px) {
   .container {
