showing description for qualifier

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -31,8 +31,12 @@ body {
   border-top: 1px solid #e5e5e5;
 }
 
-th {
+.table {
   text-align: center;
+}
+
+th {
+  text-align: center
 }
 
 /* Customize container */
