--- a/app/views/main.html
+++ b/app/views/main.html
@@ -40,6 +40,7 @@
         <tr ng-repeat="detail in welldetails" ng-class="{'danger': detail.concentration > detail.limit, 'warning': detail.concentration == detail.limit && detail.qualifier != 'ABSENT', 'success': detail.concentration < detail.limit, 'success': detail.qualifier == 'ABSENT'}"><td>{{detail.analyteType}}</td><td>{{detail.chemName}}</td><td>{{detail.concentration}} {{detail.unit}}</td><td>{{detail.qualDesc}}</td><td>{{detail.limit}} {{detail.unit}}</td><td>{{detail.epi}} {{detail.epiUnit}}</td></tr>
       </tbody>
     </table>
-    <button class="btn btn-primary" ng-click="print()" ng-disabled="countResults()"><span class="glyphicon glyphicon-save"></span> Save To PDF</button>
+
+    <!--[if !IE]><!--><button class="btn btn-primary" ng-click="print()" ng-disabled="countResults()"><span class="glyphicon glyphicon-save"></span> Save To PDF</button><!--<![endif]-->
   </div>
 </div>
