hide print on IE

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -41,6 +41,6 @@
       </tbody>
     </table>
 
-    <!--[if !IE]><!--><button class="btn btn-primary" ng-click="print()" ng-disabled="countResults()"><span class="glyphicon glyphicon-save"></span> Save To PDF</button><!--<![endif]-->
+    <!--[if !IE]><button class="btn btn-primary" ng-click="print()" ng-disabled="countResults()"><span class="glyphicon glyphicon-save"></span> Save To PDF</button><![endif]-->
   </div>
 </div>
